--- a/rayline.plist
+++ b/rayline.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://119.23.58.223:8000/rayline.ipa</string>
+					<string>https://lovebirdsx.github.io/release/rayline.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
