--- a/release/rayline/1.0/rayline.plist
+++ b/release/rayline/1.0/rayline.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://119.23.58.223/rayline/release/1.0/rayline.ipa</string>
+					<string>https://code.aliyun.com/lovebirdsx/rayline_pub/raw/master/1.0/rayline.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
