--- a/release/rayline2/rayline2.plist
+++ b/release/rayline2/rayline2.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>rayline2.ipa</string>
+				<string>Unity-iPhone.ipa</string>
 			</dict>
 		</dict>
 	</array>
