--- a/release/rayline2/rayline2.plist
+++ b/release/rayline2/rayline2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://code.aliyun.com/lovebirdsx/rayline_pub/raw/master/ios/Unity-iPhone.ipa</string>
+					<string>https://code.aliyun.com/lovebirdsx/rayline_pub/raw/master/ios/Rayline2.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Unity-iPhone.ipa</string>
+				<string>Rayline2.ipa</string>
 			</dict>
 		</dict>
 	</array>
